# Jeanne

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  README.md  appveyor.yml
.github/workflows/: release.yml  rust.yml
src/: config.rs  constants.rs  main.rs  rt.rs  stats.rs  twitter.rs
src/config/: discord.rs  mod.rs
src/discord/: commands.rs  mod.rs
src/utils/: mod.rs  mpmc.rs
