[package]
name = "jeanne"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
publish = false
description = "My discord bot named after best girl in Naze Boku no Sekai wo Dare mo Oboeteinainoka"
readme = "README.md"
repository = "https://github.com/DoumanAsh/Jeanne"
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
categories = ["web-programming::http-client"]
edition = "2018"

[dependencies]
cute-log = "1"
cute-dnd-dice = "2"

[dependencies.serenity]
version = "0.6"

[dependencies.log]
version = "0"
default-features = false
features = ["max_level_warn", "release_max_level_info"]
