[package]
name = "jeanne"
version = "1.0.1"
authors = ["Douman <douman@gmx.se>"]
publish = false
description = "My discord bot named after best girl in Naze Boku no Sekai wo Dare mo Oboeteinainoka"
readme = "README.md"
repository = "https://github.com/DoumanAsh/Jeanne"
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
categories = ["web-programming::http-client"]
edition = "2018"

[dependencies]
lazy_static = "1"
cute-log = "1"
cute-dnd-dice = "2"
parking_lot = "0.8"
bincode = "1"
async-timer = "0.2"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serenity]
version = "0.6"

[dependencies.log]
version = "0"
default-features = false
features = ["max_level_info", "release_max_level_warn"]

[dependencies.tokio-global]
version = "0.2"
features = ["single"]

[dependencies.egg-mode]
git = "https://github.com/QuietMisdreavus/twitter-rs"
default-features = false
features = ["hyper-rustls"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
