[package]
name = "jeanne"
version = "1.1.7"
authors = ["Douman <douman@gmx.se>"]
publish = false
description = "My discord bot named after best girl in Naze Boku no Sekai wo Dare mo Oboeteinainoka"
readme = "README.md"
repository = "https://github.com/DoumanAsh/Jeanne"
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
categories = ["web-programming::http-client"]
edition = "2018"

[dependencies]
lazy_static = "1"
cute-dnd-dice = "2"
parking_lot = "0.10"
bincode = "1"
async-timer = "0.7"
rand = "0.7"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serenity]
version = "0.8"

[dependencies.rogu]
version = "0.2"
#features = ["std", "release_level_trace_off", "release_level_debug_off"]
features = ["std", "release_level_trace_off"]

[dependencies.log]
version = "0"
default-features = false
features = ["max_level_info", "release_max_level_off"]

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["macros", "rt-core"]

[dependencies.futures-util]
version = "0.3"
default-features = false

[dependencies.egg-mode]
git = "https://github.com/QuietMisdreavus/twitter-rs"
default-features = false
features = ["hyper-rustls"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
